--- a/style.css
+++ b/style.css
@@ -48,7 +48,21 @@
 
 html {
     scroll-behavior: smooth;
-    cursor: none;
+}
+
+
+/* scroll bar */
+
+::-webkit-scrollbar
+{
+	width: 12px;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent,#100e17);
+  border-radius: 6px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(transparent,#5918df);
 }
 
 .nav-bar {
@@ -208,7 +222,7 @@ html {
 
 
 
-#mouse-circle {
+/* #mouse-circle {
     position: absolute;
     width: 40px;
     height: 40px;
@@ -216,6 +230,7 @@ html {
     border: 1px solid #0f1c64;
     border-radius: 50%;
     pointer-events: none;
+   
 }
 
 #mouse-circle::after {
@@ -228,7 +243,8 @@ html {
     transform: translate(-50%, -50%);
     background-color: #fff;
     border-radius: 50%;
-}
+    z-index: 10px;
+} */
 
 
 
@@ -261,7 +277,6 @@ nav ul li:hover {
 
 a {
     text-decoration: none;
-    cursor: none;
 }
 
 #active {
@@ -270,6 +285,7 @@ a {
 
 .logo {
     align-items: center;
+    cursor: pointer;
 }
 
 .menu {
