--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ a {
 
 .line {
     border-left: 2px solid #5918df;
-    height: 2880px;
+    height: 2780px;
     position: absolute;
     left: 25%;
     margin-left: -3px;
@@ -403,12 +403,14 @@ a {
 .work {
     background-color: #1a1426;
     height: 800px;
+    padding-top: 50px;
 }
 
 .work-content {
     position: relative;
     left: 430px;
     top: 40px;
+    width: 50%;
 }
 
 .work-subContent {
@@ -417,6 +419,37 @@ a {
     font-size: 30px;
 }
 
+.line1{
+    width: 20%;
+}
+
+section {
+    position: relative;
+    width: 80%;
+    height: 80vh;
+    display: flex;
+    flex-direction: row;
+    padding: 0 4em;
+    top: 30px;
+    left: 200px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.d{
+    background-color: #100e17;
+    width: 280px;
+    height: 300px;
+    border: 2px solid #3e1695;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #3e1695;
+    font-size: 30px;
+}
 
 .line1 {
     border-left: 2px solid #5918df;
@@ -439,107 +472,11 @@ a {
     border: #5918df solid 2px;
 }
 
-section {
-    position: relative;
-    width: 80%;
-    height: 80vh;
-    display: flex;
-    flex-direction: row;
-    padding: 0 4em;
-    top: 30px;
-    left: 200px;
-    /* flex-wrap: wrap; */
-    justify-content: space-around;
-    align-items: center;
-}
-
-.container {
-    perspective: 1000px;
-    height: 28vh;
-    max-width: 33.33%;
-    cursor: pointer;
-}
-
-.card {
-    transform-style: preserve-3d;
-    height: 100%;
-    width: 100%;
-    transition: 0.5s ease;
-}
-
-.front,
-.back {
-    height: 100%;
-    width: 100%;
-    transform-style: preserve-3d;
-    color: #ffffff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    border-radius: 0.4em;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    backface-visibility: hidden;
-}
-
-/* .front {
-    background: linear-gradient(to right, #a246ef, #6523fe);
-  } */
-.front {
-    background: linear-gradient(to right, #5918df, #0e0d17);
-}
-
-.front img {
-    width: 5em;
-}
-
-.content1 {
-    transform: translateZ(60px);
-}
-
-.content1 h3 {
-    font-size: 22px;
-    margin-top: 1em;
-    font-weight: 600;
-    letter-spacing: 0.04em;
-}
-
-.content1 p {
-    font-size: 14px;
-    line-height: 2em;
-    letter-spacing: 0.02em;
-    padding: 0 3em;
-}
-
-.back {
-    background-color: #28253a;
-    transform: rotateX(180deg);
-}
-
-.container:hover .card {
-    transform: rotateX(180deg);
-}
-
-@media screen and (min-width: 992px) {
-    section {
-        padding: 0 1em;
-    }
-
-    .container {
-        flex-basis: 0 0 33.33%;
-        max-width: 33.33%;
-        padding: 0 1.5em;
-    }
-}
-
-
-
 .about {
     background-color: #15131c;
     width: 100%;
-    height: 900px;
+    height: 800px;
+    padding-top: 50px;
 }
 
 .work-content1 {
@@ -561,7 +498,7 @@ section {
 
 .about-elements {
     position: relative;
-    top: -712px;
+    top: -542px;
 }
 
 .about-line {
@@ -620,6 +557,7 @@ section {
     background-color: #15131c;
     width: 100%;
     height: 600px;
+    padding-top: 50px;
 }
 
 .work-content2 {
@@ -820,7 +758,7 @@ textarea {
     .line {
         position: absolute;
         left: 25%;
-        height: 2500px;
+        height: 2300px;
         margin-left: -3px;
         top: 160px;
     }
@@ -850,7 +788,7 @@ textarea {
     }
 
     .about {
-        height: 900px;
+        height: 700px;
     }
 
     .about-content {
@@ -880,6 +818,7 @@ textarea {
         top: 30px;
         left: 420px;
         width: 50%;
+        
     }
 
     .my-form {
@@ -939,7 +878,7 @@ textarea {
     .line {
         position: absolute;
         left: 16%;
-        height: 2630px;
+        height: 2530px;
         margin-left: -3px;
         top: 160px;
     }
@@ -1017,7 +956,8 @@ textarea {
     }
 
     .about {
-        height: 950px;
+        height: 850px;
+        padding-top: 50px;
     }
 
     .about-content {
@@ -1118,6 +1058,8 @@ textarea {
         margin-left: 25px;
     }
 
+    
+
 }
 
 @media screen and (max-width:768px) {
@@ -1149,7 +1091,7 @@ textarea {
     .line {
         position: absolute;
         left: 16%;
-        height: 2800px;
+        height: 2600px;
         margin-left: -3px;
         top: 160px;
     }
@@ -1175,7 +1117,7 @@ textarea {
     }
 
     .work {
-        height: 600px;
+        height: 500px;
     }
 
     .work-content {
@@ -1184,14 +1126,15 @@ textarea {
         width: 60%;
     }
 
-    .work-section {
-        position: relative;
-        top: 50px;
-        left: -10px;
-        display: flex;
-        flex-direction: column;
-        width: 100%;
+    .d{
+        width: 200px;
+        height: 150px;
+    }
 
+    .work-section{
+        position: relative;
+        right: 30px;
+        height: 400px;
     }
 
     .work-subContent {
@@ -1209,15 +1152,6 @@ textarea {
     }
 
 
-    .container {
-        padding: 20px;
-        max-width: 100%;
-    }
-
-    .content1 p {
-        display: none;
-    }
-
     .work-content1 {
         position: relative;
         left: 150px;
@@ -1225,7 +1159,7 @@ textarea {
     }
 
     .about {
-        height: 1100px;
+        height: 1000px;
     }
 
     .about-content {
@@ -1316,7 +1250,7 @@ textarea {
         left: 10%;
         margin-left: -3px;
         top: 120px;
-        height: 3100px;
+        height: 2840px;
     }
 
     .entry-content {
@@ -1335,7 +1269,7 @@ textarea {
     }
 
     .work {
-        height: 620px;
+        height: 750px;
     }
 
     .work-content {
@@ -1344,14 +1278,15 @@ textarea {
         width: 70%;
     }
 
-    .work-section {
-        position: relative;
-        top: 50px;
-        left: -10px;
-        display: flex;
-        flex-direction: column;
-        width: 100%;
+    .d{
+        width: 200px;
+        height: 150px;
+    }
 
+    .work-section{
+        position: relative;
+        right: 30px;
+        height: 600px;
     }
 
     .work-subContent {
@@ -1368,16 +1303,6 @@ textarea {
         left: -64px;
     }
 
-
-    .container {
-        padding: 20px;
-        max-width: 100%;
-    }
-
-    .content1 p {
-        display: none;
-    }
-
     .work-content1 {
         position: relative;
         left: 60px;
@@ -1385,7 +1310,7 @@ textarea {
     }
 
     .about {
-        height: 1400px;
+        height: 1000px;
     }
 
     .about-content {
@@ -1456,11 +1381,22 @@ textarea {
     }
 
     .work {
-        height: 720px;
+        height: 820px;
+    }
+
+    .d{
+        width: 200px;
+        height: 150px;
+    }
+
+    .work-section{
+        position: relative;
+        right: 30px;
+        height: 700px;
     }
 
     .line {
-        height: 3300px;
+        height: 3000px;
     }
 
     .line1::before {
@@ -1488,7 +1424,8 @@ textarea {
     }
 
     .about {
-        height: 1500px;
+        height: 1100px;
+        padding-top: 50px;
     }
 
     .about-content {
@@ -1557,7 +1494,7 @@ textarea {
 
     .line {
         border-left: 2px solid #5918df;
-        height: 3660px;
+        height: 3480px;
         position: absolute;
         left: 10%;
         margin-left: -3px;
@@ -1582,7 +1519,7 @@ textarea {
     }
 
     .work {
-        height: 620px;
+        height: 840px;
     }
 
     .work-content {
@@ -1591,19 +1528,20 @@ textarea {
         width: 70%;
     }
 
-    .work-section {
-        position: relative;
-        top: 50px;
-        left: -10px;
-        display: flex;
-        flex-direction: column;
-        width: 90%;
-
-    }
-
     .work-subContent {
         font-size: 20px;
         width: 90%;
+    }
+
+    .d{
+        width: 200px;
+        height: 150px;
+    }
+
+    .work-section{
+        position: relative;
+        right: 30px;
+        height: 700px;
     }
 
     .line1 {
@@ -1616,16 +1554,7 @@ textarea {
     }
 
     .about {
-        height: 1900px;
-    }
-
-    .container {
-        padding: 20px;
-        max-width: 100%;
-    }
-
-    .content1 p {
-        display: none;
+        height: 1500px;
     }
 
     .work-content1 {
