--- a/style.css
+++ b/style.css
@@ -1716,6 +1716,7 @@ textarea {
         position: relative;
         right: 30px;
         height: 700px;
+        margin-top: 20px;
     }
 
     .about {
