--- a/style.css
+++ b/style.css
@@ -478,6 +478,11 @@ section {
 section a{
     text-decoration: none;
     color: #5918df;
+    outline: 0;
+}
+
+section a:active{
+    color: #5918df;
 }
 
 
