--- a/style.css
+++ b/style.css
@@ -784,6 +784,11 @@ textarea {
 
 @media screen and (max-width:1440px) {
 
+    .logo{
+        position: relative;
+        right: 200px;
+    }
+
     .header {
         background-size: 1940px 700px;
         height: 600px;
@@ -1789,3 +1794,5 @@ textarea {
         margin-bottom: 20px;
     }
 }
+
+/*  timer2ER </>Sathyakumar */
